--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,15 +6,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <!-- <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Déconnexion</a>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link active" aria-current="page" routerLink="appareil">Appareils</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page">Bonjour</a>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link active" aria-current="page" routerLink="auth">Connexion</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Connexion</a>
-            </li> -->
         </ul>
       </div>
     </div>
