--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,21 +11,7 @@
   <br /> <br /><br /> <br />
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <h1 class="text-center">Mes appareils</h1>
-        <p>Mise à jour : {{ lastUpdate | date: 'EEEE, d MMMM y' | uppercase }}</p>
-        <ul class="list-group">
-          <app-appareil *ngFor="let appareil of appareils" 
-                          [appareilName]="appareil.name"
-                          [appareilStatus]="appareil.status"
-          ></app-appareil>
-        </ul>
-        <button class="btn btn-success" (click)="turnOn()"
-        >--On-all</button>
-
-        <button class="btn btn-danger" (click)="turnOff()"
-        >--Off-all</button>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </body>
