show single page componente

--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -5,6 +5,7 @@
       <app-appareil *ngFor="let appareil of appareils" 
                       [appareilName]="appareil.name"
                       [appareilStatus]="appareil.status"
+                      [id]="appareil.id"
       ></app-appareil>
     </ul>
     <button class="btn btn-success" (click)="turnOn()"
