--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -2,6 +2,7 @@
                                         'list-group-item-danger': appareilStatus === 'éteint'}">
     <div class="CareRouge" *ngIf="appareilStatus==='éteint'"
     ></div>
-    <h5 [ngStyle]="{ color: getColor() }">--Appareil {{ appareilName }} --Status {{ getStatus() }}</h5> 
+    <h5 [ngStyle]="{ color: getColor() }">--Appareil {{ appareilName }} --Status {{ getStatus() }}</h5>
+    <a [routerLink]="[id]">Détails</a>
     <input type="text" class="form-control" [(ngModel)]="appareilName">
 </li>
