--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <br /> <br /><br /> <br />
   <div class="container">
     <div class="row">
+      <p>Vous êtes connecté depuis {{ secondes }} secondes</p>
       <router-outlet></router-outlet>
     </div>
   </div>
